# espresso-donation-box

./: .gitignore  .gitmodules  README.md
.github/workflows/: contracts.yml  rust.yml
back/: Cargo.toml  README.md
back/src/: main.rs
back/src/handlers/: mod.rs
back/src/middlewares/: mod.rs
back/src/services/: mod.rs
back/src/services/donation_box/: mod.rs
back/src/services/eth_usd_price/: mod.rs
contracts/: foundry.toml
contracts/script/: DonationBox.s.sol
contracts/script/bash/: test-cli-anvil.txt
contracts/src/: DonationBox.sol
contracts/test/: SendDonation.t.sol
front/: .env.example  README.md  next.config.js  package.json  pnpm-lock.yaml
front-next/: package.json  pnpm-lock.yaml
front-next/src/app/: page.tsx
front-next/src/components/AnimatedLogo/: index.tsx  styles.module.css
front-next/src/components/Box/: styles.module.css
front-next/src/components/Button/: index.tsx  styles.module.css
front-next/src/components/DonationForm/: index.tsx  styles.module.css
front-next/src/components/Footer/: styles.module.css
front-next/src/components/Input/: styles.module.css
front-next/src/components/Main/: index.tsx  styles.module.css
front-next/src/components/NavBar/: index.tsx  styles.module.css
front-next/src/components/Title/: styles.module.css
front-next/src/components/Total/: index.tsx  (+1 more)
front-next/src/constants/: index.ts
front-next/src/providers/: WagmiProvider.tsx
front-next/src/styles/: globals.css
front/src/app/: layout.tsx  page.tsx
front/src/providers/: WagmiProvider.tsx
front/src/styles/: fonts.ts  globals.css
(+23 files in other folders)
