[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
dotenv = "0.15.0"
ethers = "2.0.11"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
tower-http = {version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
wiremock = "0.5.22"
